# dynamic_variant

./: .gitignore  .gitmodules  CMakeLists.txt  gulpfile.js  index.js  make.js  package-lock.json  package.json
include/gulachek/: dynamic_variant.hpp
test/: dynamic_variant_test.cpp
